<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/Theme.RunningApp.FadedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints="@string/title"
            android:hint="@string/title"
            android:inputType="textAutoComplete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/weekdays"
            style="@style/Theme.RunningApp.FadedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/weekdays"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTitle" />


        <CheckBox
            android:id="@+id/checkBoxMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/monday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weekdays" />

        <CheckBox
            android:id="@+id/checkBoxTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            app:layout_constraintStart_toEndOf="@id/checkBoxMonday"
            app:layout_constraintTop_toBottomOf="@id/weekdays"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="143dp" />

        <CheckBox
            android:id="@+id/checkBoxWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            app:layout_constraintStart_toEndOf="@id/checkBoxTuesday"
            app:layout_constraintTop_toBottomOf="@id/weekdays"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="143dp" />

        <CheckBox
            android:id="@+id/checkBoxThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            app:layout_constraintStart_toEndOf="@id/checkBoxWednesday"
            app:layout_constraintTop_toBottomOf="@id/weekdays"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="143dp" />

        <CheckBox
            android:id="@+id/checkBoxFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            app:layout_constraintStart_toEndOf="@id/checkBoxThursday"
            app:layout_constraintTop_toBottomOf="@id/weekdays"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="143dp" />

        <CheckBox
            android:id="@+id/checkBoxSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            app:layout_constraintStart_toEndOf="@id/checkBoxFriday"
            app:layout_constraintTop_toBottomOf="@id/weekdays"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="143dp" />

        <CheckBox
            android:id="@+id/checkBoxSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            app:layout_constraintStart_toEndOf="@id/checkBoxSaturday"
            app:layout_constraintTop_toBottomOf="@id/weekdays"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="143dp" />

        <TextView
            android:id="@+id/fromDate"
            style="@style/Theme.RunningApp.FadedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxMonday" />

        <TextView
            android:id="@+id/editStartingDate"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fromDate" />

        <TextView
            android:id="@+id/toDate"
            style="@style/Theme.RunningApp.FadedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editStartingDate" />

        <TextView
            android:id="@+id/editEndDate"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toDate" />

        <TextView
            android:id="@+id/description"
            style="@style/Theme.RunningApp.FadedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editEndDate" />

        <MultiAutoCompleteTextView
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>