<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.runningapp.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_record_run"
            app:destination="@id/nav_record_run" />
    </fragment>

    <fragment
        android:id="@+id/nav_running_schedule"
        android:name="com.example.runningapp.fragments.runningSchedule.RunningScheduleFragment"
        android:label="@string/menu_running_schedule"
        tools:layout="@layout/fragment_running_schedule" >
        <action
            android:id="@+id/action_nav_running_schedule_to_nav_running_schedule_entry"
            app:destination="@id/nav_running_schedule_entry" />
        <action
            android:id="@+id/action_nav_running_schedule_to_nav_add_running_schedule_entry"
            app:destination="@id/nav_add_running_schedule_entry" />
        <action
            android:id="@+id/action_nav_running_schedule_to_nav_edit_running_schedule_entry"
            app:destination="@id/nav_edit_running_schedule_entry" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.runningapp.fragments.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_record_run"
        android:name="com.example.runningapp.fragments.record.RecordRunFragment"
        android:label="@string/menu_record_run"
        tools:layout="@layout/fragment_record_run" />

    <fragment
        android:id="@+id/nav_running_schedule_entry"
        android:name="com.example.runningapp.fragments.runningSchedule.RunningScheduleEntryFragment"
        tools:layout="@layout/fragment_running_schedule_entry" >
        <action
            android:id="@+id/action_nav_running_schedule_entry_to_nav_edit_running_schedule_entry"
            app:destination="@id/nav_edit_running_schedule_entry" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_running_schedule_entry"
        android:name="com.example.runningapp.fragments.runningSchedule.AddRunningScheduleEntryFragment"
        tools:layout="@layout/fragment_edit_running_schedule_entry" />

    <fragment
        android:id="@+id/nav_edit_running_schedule_entry"
        android:name="com.example.runningapp.fragments.runningSchedule.EditRunningScheduleEntryFragment"
        tools:layout="@layout/fragment_edit_running_schedule_entry" />
</navigation>