<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RunningScheduleEntryActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dummy Titel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weekdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekdays" />

        <TextView
            android:id="@+id/weekdays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="Mo Di Mi Do Fr Sa So"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/periodTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period" />

        <TextView
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="31.10.2021 - 01.01.2022"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="description"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>